src/objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>PPC_Diagnostic_Therapeutic_Procedures_16__c</fullName>
        <inlineHelpText>Arthrocentesis</inlineHelpText>
        <label>PPC Diagnostic/Therapeutic Procedures 16</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Head_Neck_30__c</fullName>
        <inlineHelpText>Indirect laryngoscopy</inlineHelpText>
        <label>PPC Head.Neck 30</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Head_Neck_31__c</fullName>
        <inlineHelpText>Epistaxis control</inlineHelpText>
        <label>PPC Head.Neck 31</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Hemodynamic_Techniques_32__c</fullName>
        <inlineHelpText>Peripheral and central venous access</inlineHelpText>
        <label>PPC Hemodynamic Techniques 32</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Hemodynamic_Techniques_33__c</fullName>
        <inlineHelpText>Intraosseus infusion</inlineHelpText>
        <label>PPC Hemodynamic Techniques 33</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Hemodynamic_Techniques_34__c</fullName>
        <inlineHelpText>Venous cutdown</inlineHelpText>
        <label>PPC Hemodynamic Techniques 34</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Miscellaneous_54__c</fullName>
        <inlineHelpText>Acute psychiatric ilness</inlineHelpText>
        <label>PPC Miscellaneous 54</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Miscellaneous_55__c</fullName>
        <inlineHelpText>Alcohol overdose and withdrawal symptoms</inlineHelpText>
        <label>PPC Miscellaneous 55</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Miscellaneous_56__c</fullName>
        <inlineHelpText>Management of poisonings</inlineHelpText>
        <label>PPC Miscellaneous 56</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_OB_GYN_35__c</fullName>
        <inlineHelpText>Precipituous delivery of newborn</inlineHelpText>
        <label>PPC OB/GYN 35</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_OB_GYN_36__c</fullName>
        <inlineHelpText>Management of trauma in pregnancy</inlineHelpText>
        <label>PPC OB/GYN 36</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_OB_GYN_37__c</fullName>
        <inlineHelpText>Interpretation of intrauterine fetal monitoring</inlineHelpText>
        <label>PPC OB/GYN 37</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Orthopedics_42__c</fullName>
        <inlineHelpText>Emergency/urgent closed reduction and splinting of fractures and dislocations</inlineHelpText>
        <label>PPC Orthopedics 42</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Orthopedics_43__c</fullName>
        <inlineHelpText>Application of leg traction splint</inlineHelpText>
        <label>PPC Orthopedics 43</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Orthopedics_44__c</fullName>
        <inlineHelpText>Cervical immobilization</inlineHelpText>
        <label>PPC Orthopedics 44</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Trauma_45__c</fullName>
        <inlineHelpText>Interpretation of cervical spine x-rays</inlineHelpText>
        <label>PPC Trauma 45</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Trauma_46__c</fullName>
        <inlineHelpText>Management of head injury</inlineHelpText>
        <label>PPC Trauma 46</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Trauma_47__c</fullName>
        <inlineHelpText>Recongition and management of spinal injury</inlineHelpText>
        <label>PPC Trauma 47</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Wound_Management_51__c</fullName>
        <inlineHelpText>Repair of lacerations</inlineHelpText>
        <label>PPC Wound Management 51</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Wound_Management_52__c</fullName>
        <inlineHelpText>Foreign body removal from superficial site or readily accessible body cavities</inlineHelpText>
        <label>PPC Wound Management 52</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPC_Wound_Management_53__c</fullName>
        <inlineHelpText>Emergency management of burn victims</inlineHelpText>
        <label>PPC Wound Management 53</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_a_Settlement__c</fullName>
        <label>Paid a Settlement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patient_Satisfaction__c</fullName>
        <inlineHelpText>Are you familiar with, and supportive of, Patient satisfaction initiatives and processes?</inlineHelpText>
        <label>Patient Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Sanction_Actions__c</fullName>
        <inlineHelpText>Have you ever been or are you currently under review or investigation by any med organization, Professional review organization, peer review organization, Medicare, Medicaid, Champus, or have you ever been sanctioned or excluded from any payor program?</inlineHelpText>
        <label>Peer Review/Sanction Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Ability__c</fullName>
        <inlineHelpText>Do you know of any reason why you cannot perform the essential functions of the position for which you are applying according to acceptable standards of professional performance and without posing a direct threat to patients?</inlineHelpText>
        <label>Performance Ability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Practice_Preference__c</fullName>
        <label>Practice Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Clinic Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Part time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Track Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Track Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalist Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalist Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Practiced_with_out_Coverage__c</fullName>
        <label>Practiced without Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privileges_Membership_Actions__c</fullName>
        <inlineHelpText>Have your priv/membership w/ any med facility, med society or state med board been denied suspended lmted, revoked because of disciplinary action, focused peer review or because of the possibility that an investigated/disciplinary action was to take place</inlineHelpText>
        <label>Privileges/Membership Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proceeding_been_Institued__c</fullName>
        <label>Proceeding been Institued?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Applicant_Portals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Completion_Action__c</fullName>
        <inlineHelpText>Have you had any problems with record completion (such as accuracy, timeliness, delinquency, thoroughness)?</inlineHelpText>
        <label>Record Completion Action</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_and_Immunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release and Immunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Items_1099__c</fullName>
        <label>1099 Reporting Items</label>
        <picklist>
            <picklistValues>
                <fullName>Individual/Social security #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate entity/Federal EIN#</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reprimanded_or_Fined__c</fullName>
        <label>Reprimanded or Fined</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Safety_Risk__c</fullName>
        <label>Safety Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sanctioned_by_Hospital_or_Agency__c</fullName>
        <label>Sanctioned by Hospital or Agency</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saved_But_Not_Sumitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saved But Not Sumitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seeking_Board_Certification__c</fullName>
        <label>Seeking Board Certification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_to_Criminal_Action__c</fullName>
        <label>Subject to Criminal Action</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_to_Investigative_Hearings__c</fullName>
        <label>Subject to Investigative Hearings</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_to_Levies_or_Liens__c</fullName>
        <label>Subject to Levies or Liens</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_to_State_Investigation__c</fullName>
        <label>Subject to State Investigation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminated_Status_as_student__c</fullName>
        <label>Terminated Status as student</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_System_Used__c</fullName>
        <label>Type of System Used</label>
        <picklist>
            <picklistValues>
                <fullName>A-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allscripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mekesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promed Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-System EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellsoft</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Use_any_Chemical_Substances__c</fullName>
        <label>Use any Chemical Substances</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volumes__c</fullName>
        <label>Volumes</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voluntarily_Surrendered_Privileges__c</fullName>
        <label>Voluntarily Surrendered Privileges</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_of_ED_Experience__c</fullName>
        <label>Years of ED Experience</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0}</displayFormat>
        <label>Applicant Portal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Hospitalist</fullName>
        <active>true</active>
        <label>Hospitalist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mid_Level</fullName>
        <active>true</active>
        <label>Mid Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>Physician</fullName>
        <active>true</active>
        <label>Physician</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>